<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DistanceActivity">


    <EditText
        android:id="@+id/miles_editText"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:maxLength="3"
        android:hint="@string/hint"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/inches_editText"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/miles_editText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:hint="@string/hint"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/feet_editText"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inches_editText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:hint="@string/hint"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/miles_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/miles_editText"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="2dp"
        android:layout_marginTop="6dp"
        android:textSize="15sp"
        android:text="@string/miles" />

    <TextView
        android:id="@+id/inches_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/inches_editText"
        app:layout_constraintTop_toBottomOf="@id/miles_editText"
        android:layout_marginTop="6dp"
        android:layout_marginStart="2dp"
        android:textSize="15sp"
        android:text="@string/inches"/>

    <TextView
        android:id="@+id/feet_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/feet_editText"
        app:layout_constraintTop_toBottomOf="@id/inches_editText"
        android:layout_marginTop="6dp"
        android:layout_marginStart="2dp"
        android:textSize="15sp"
        android:text="@string/feet"/>

    <CheckBox
        android:id="@+id/metres_chkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/feet_editText"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/convertToMetres"/>

    <Button
        android:id="@+id/convert_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="150dp"
        android:textSize="34sp"
        android:text="@string/convert"/>

    <TextView
        android:id="@+id/milesResult_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/miles_editText"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:textSize="34sp"
        android:text="@string/defaultResult"/>

    <TextView
        android:id="@+id/inchesResult_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/inches_editText"
        app:layout_constraintTop_toBottomOf="@id/milesResult_textView"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:textSize="34sp"
        android:text="@string/defaultResult"/>

    <TextView
        android:id="@+id/feetResult_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/feet_editText"
        app:layout_constraintTop_toBottomOf="@id/inchesResult_textView"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:textSize="34sp"
        android:text="@string/defaultResult"/>


</android.support.constraint.ConstraintLayout>